src/tests/cases/snapshots/ui__delete_file-4.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[3]"
---
                                                                                                                                                                                              
                                                                            /tmp/bandwhich_tests/delete_file (8 2                                                                             
                                                                                                                                                                                              
                                                                                                                              ─                                                               
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                            file3                                                                                             
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                          4.1K (50%)                                                                                          
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                    ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                 subfolder1/ (+1 descendants)                                                                                 
                                                                                                                                                                                              
                                                                                          4.1K (50%)                                                                                          
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                              ─                                                               
                                                                                                                                                                                              

