src/tests/cases/snapshots/ui__delete_file-5.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[4]"
---
        8.0K (3 files), fre d: 4.0K | /tmp/cosmonau _te ts/d l te_file                                                                                                                        
                                                                                                                              ─                                                               
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                            file3                                                                                             
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                          4.0K (50%)                                                                                          
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                    ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                 subfolder1/ (+1 descendants)                                                                                 
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                          4.0K (50%)                                                                                          
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                              ─                                                               
                                                                                                                                                                                              
                                                                                                                                                                                              

